--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 	    "filterable":1
 	},
 	{
+            "key": "奈飞",
+            "name": "奈飞",
+            "type":3,
+            "api":"csp_xBPQ",
+            "searchable":1,
+            "quickSearch":1,
+            "filterable":1,
+            "ext":"https://raw.githubusercontent.com/ljfbin/ljfbin.github.io/main/%E5%A5%88%E9%9D%9E%E7%94%B5%E5%BD%B1.json"
+         }, 
+
+	{
             "key": "csp_XBPQ厂长资源",
             "name": "厂长影视(龙哥推荐)",
             "type":3,
