--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   "sites": [
     {
       "key": "T4_douban",
-      "name": "🍀龙哥影视，更新时间：2022/10/31",
+      "name": "🍀龙哥影视APP，更新时间：2022/11/1",
       "type": 4,
       "api": "http://top.fuqizhishi.com/vod",
       "searchable": 1,
@@ -11,7 +11,7 @@
     },
     {
       "key": "csp_XBPQ厂长资源",
-      "name": "厂长影视(XBPQ)",
+      "name": "厂长影视(龙哥自用推荐)",
       "type": 3,
       "api": "csp_xBPQ",
       "searchable": 1,
