--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 //{ "key":"douban","name":"🍀龙哥影视APP,更新时间:2022/11/17","type":4, "api":"http://top.fuqizhishi.com/vod","searchable": 0,"quickSearch":0,"filterable": 0 },
     {
       "key":"js豆瓣",
-      "name":"🍀龙哥影视APP,更新时间:2022/11/17",
+      "name":"🍀龙哥影视APP,更新时间:2022/11/22",
       "type":3,
       "api":"https://gitlab.com/duomv/duo/-/raw/main/js/yingmo.js",
       "ext":"https://gitlab.com/duomv/duo/-/raw/main/js/douban.js",
@@ -11,6 +11,19 @@
       "quickSearch": 0,
       "filterable": 0
       },
+//一起看TV来自巧记大佬
+	{
+	  "key":"YQK_spider",
+	  "name":"🏆️一起看TV",
+	  "api":"csp_YQKAPP",
+	  "type":3,
+	  "filterable":1,
+	  "playerType":2,
+	  "quickSearch":1,
+	  "searchable":1,
+	  "ext":"https://api-tx.shumaxc.xyz",
+	  "jar":"https://gitlab.com/duomv/duo/-/raw/main/jar/qj1122.jar;md5;1c8bcbb4ac6ca9f5926f32fb6c5aff21"
+	},
     {
       "key": "csp_XYQ_lu1",
       "name": "️🖥️电视直播",
@@ -30,7 +43,7 @@
       "quickSearch": 1,
       "filterable": 1
     },
-        {
+    {
       "key": "APPTT",
       "name": "🗺️图图影视",
       "type": 3,
@@ -39,6 +52,18 @@
       "quickSearch": 1,
       "filterable": 1
     },
+    {
+	  "key":"百影视频",
+	  "name":"💯百影视频",
+	  "type":3,
+	  "api":"csp_MianHua",
+	  "searchable":1,
+	  "playerType":2,
+	  "quickSearch":1,
+	  "filterable":0,
+	  "ext":"http://47.104.99.175",
+	  "jar":"./jar/qj1122.jar"
+	 },
     {
       "key": "drpy_js_看视界",
       "name": "🎉看视界🎉",
@@ -121,14 +146,6 @@
       "filterable": 1,
       "categories": ["国产剧", "日韩剧", "港台剧", "欧美剧", "综艺", "动漫", "动作片", "科幻片", "战争片", "喜剧片", "爱情片", "恐怖片", "剧情片"]
     },
-    {
-        "key":"多多资源",
-        "name":"🍵多多资源",
-        "quickSearch":1,
-        "searchable":1,
-        "type":1,
-        "api":"https://www.ddzyz1.com/api.php/provide/vod/"
-    }, 
     {
       "key": "Kuaikan",
       "name": "🦋快看影视",
@@ -839,7 +856,7 @@
       "searchable": 1,
       "quickSearch": 1,
       "filterable": 1,
-      "ext":"5e8a0d48c3f4486a843351c716c1af66",
+      "ext":"69355eb2358747f49889c444126ef089",
       "jar":"https://gitlab.com/duomv/duo/-/raw/main/jar/ali.zip"
     },
     {
@@ -850,7 +867,7 @@
       "searchable": 1,
       "quickSearch": 1,
       "filterable": 0,
-      "ext":"5e8a0d48c3f4486a843351c716c1af66",
+      "ext":"69355eb2358747f49889c444126ef089",
       "jar":"https://gitlab.com/duomv/duo/-/raw/main/jar/sou.jar"
     },
     {
@@ -861,7 +878,7 @@
       "searchable": 1,
       "quickSearch": 1,
       "filterable": 0,
-      "ext":"5e8a0d48c3f4486a843351c716c1af66",
+      "ext":"69355eb2358747f49889c444126ef089",
       "jar":"https://gitlab.com/duomv/duo/-/raw/main/jar/sou.jar"
     },
     {
@@ -872,7 +889,7 @@
       "searchable": 1,
       "quickSearch": 1,
       "filterable": 0,
-      "ext":"5e8a0d48c3f4486a843351c716c1af66",
+      "ext":"69355eb2358747f49889c444126ef089",
       "jar":"https://gitlab.com/duomv/duo/-/raw/main/jar/sou.jar"
     },
     {
@@ -883,7 +900,7 @@
       "searchable": 0,
       "quickSearch": 0,
       "filterable": 0,
-      "ext":"5e8a0d48c3f4486a843351c716c1af66",
+      "ext":"69355eb2358747f49889c444126ef089",
       "jar":"https://gitlab.com/duomv/duo/-/raw/main/jar/sou.jar"
     },
    {
@@ -1551,14 +1568,6 @@
       "type": 2,
       "url": "Sequence"
     }, 
-{
-		"name": "多多测试",
-		"type": 0,
-		"url": "https://h5.freejson.xyz/player/?url=",
-		"ext": {
-			"flag": ["qq", "腾讯", "qiyi", "爱奇艺", "奇艺", "youku", "优酷", "mgtv", "芒果", "letv", "乐视", "pptv", "PPTV", "sohu", "bilibili", "哔哩哔哩", "哔哩"],"header":{"User-Agent":"okhttp/4.1.0"}
-		}    
-	},
     {
       "name": "多多①线",
       "type": 0,
@@ -2258,6 +2267,6 @@
     "cdnjs.hnfenxun.com",
     "cms.qdwght.com"
   ],
-  "wallpaper": "https://www.yydsys.top/api.php",
-  "spider": "https://gitlab.com/duomv/duo/-/raw/main/jar/duov.jar;md5;89c9eaec380dc16ec274b772346270ba"
+  "wallpaper": "http://leevi.ct8.pl/bg.php",
+  "spider": "https://gitlab.com/duomv/duo/-/raw/main/jar/duov.jar;md5;17714BE99529F76223038C9410608E1B"
 }
