--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   "sites": [
     {
       "key":"js豆瓣",
-      "name":"🍀龙哥影视APP",
+      "name":"🍀公众号:应用多多提醒您：请勿相信视频中的广告及付款信息",
       "type":3,
       "api":"https://gitlab.com/duomv/duo/-/raw/main/js/yingmo.js",
       "ext":"https://gitlab.com/duomv/duo/-/raw/main/js/douban.js",
@@ -20,17 +20,18 @@
     "searchable":0,
     "quickSearch":0,
     "filterable":0
-    },   
-   {
-      "key": "csp_XYQ_lu1",
-      "name": "️🖥️电视直播",
+    },
+    {
+      "key":"csp_xBPQ_dszb",
+      "name":"🖥️电视直播",
       "type": 3,
-      "api": "csp_XYQHiker",
-      "searchable": 1,
-      "quickSearch": 1,
+      "api": "csp_xBPQ",
+      "playerType":2,
+      "searchable": 0,
+      "quickSearch": 0,
       "filterable": 0,
       "ext": "./json/ningmeng.json"
-    },
+    },   
     {
       "key": "csp_Kunyu77",
       "name": "🍁多多七七",
@@ -1402,5 +1403,5 @@
         "cms.qdwght.com"
   ],
   "wallpaper": "http://leevi.ct8.pl/bg.php",
-  "spider": "./jar/duo.jar;md5;1F7D60777771BDEB738A58A239621F4C"
+  "spider": "./jar/duov.jar;md5;14B094CC4A491A476509DE2A1425C67D"
 }
