--- a/index.html
+++ b/index.html
@@ -2,20 +2,52 @@
 "storeHouse": 
 [
 {
-"sourceName": "💚多多极速仓",
+"sourceName": "💚多多极速仓/gitlab",
 "sourceUrl": "https://gitlab.com/duomv/apps/-/raw/main/1.txt"
 },
 {
-"sourceName": "💛多多缓冲仓",
+"sourceName": "💛多多缓冲仓/gitlab",
 "sourceUrl": "https://gitlab.com/duomv/apps/-/raw/main/2.txt"
 },
 {
-"sourceName": "❤️多多大佬仓",
+"sourceName": "❤️多多大佬仓/gitlab",
 "sourceUrl": "https://gitlab.com/duomv/apps/-/raw/main/3.txt"
 },
 {
-"sourceName": "🥕多多预备仓",
+"sourceName": "🥕多多预备仓/gitlab",
 "sourceUrl": "https://gitlab.com/duomv/apps/-/raw/main/4.txt"
+},
+{
+"sourceName": "💚多多极速仓/agit",
+"sourceUrl": "https://agit.ai/leevi/apps/raw/branch/main/1.txt"
+},
+{
+"sourceName": "💛多多缓冲仓/agit",
+"sourceUrl": "https://agit.ai/leevi/apps/raw/branch/main/2.txt"
+},
+{
+"sourceName": "❤️多多大佬仓/agit",
+"sourceUrl": "https://agit.ai/leevi/apps/raw/branch/main/3.txt"
+},
+{
+"sourceName": "🥕多多预备仓/agit",
+"sourceUrl": "https://agit.ai/leevi/apps/raw/branch/main/4.txt"
+},
+{
+"sourceName": "💚多多极速仓/codeberg",
+"sourceUrl": "https://codeberg.org/leevi/apps/raw/branch/main/1.txt"
+},
+{
+"sourceName": "💛多多缓冲仓/codeberg",
+"sourceUrl": "https://codeberg.org/leevi/apps/raw/branch/main/2.txt"
+},
+{
+"sourceName": "❤️多多大佬仓/codeberg",
+"sourceUrl": "https://codeberg.org/leevi/apps/raw/branch/main/3.txt"
+},
+{
+"sourceName": "🥕多多预备仓/codeberg",
+"sourceUrl": "https://codeberg.org/leevi/apps/raw/branch/main/4.txt"
 },
 {
 "sourceName": "🏮星河贵宾①🏮",
