--- a/index.html
+++ b/index.html
@@ -2,6 +2,22 @@
 "storeHouse": 
 [
 {
+"sourceName": "💚多多优选仓/jihulab",
+"sourceUrl": "https://jihulab.com/duomv/apps/-/raw/main/1.txt"
+},
+{
+"sourceName": "💛多多公众仓/jihulab",
+"sourceUrl": "https://jihulab.com/duomv/apps/-/raw/main/2.txt"
+},
+{
+"sourceName": "❤️多多聚合仓/jihulab",
+"sourceUrl": "https://jihulab.com/duomv/apps/-/raw/main/3.txt"
+},
+{
+"sourceName": "🥕多多预备仓/jihulab",
+"sourceUrl": "https://jihulab.com/duomv/apps/-/raw/main/4.txt"
+},
+{
 "sourceName": "💚多多极速仓/gitlab",
 "sourceUrl": "https://gitlab.com/duomv/apps/-/raw/main/1.txt"
 },
