--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 "storeHouse": 
 [
 {
+"sourceName": "业余分享奇奇多仓",
+"sourceUrl": "https://ghproxy.net/https://raw.githubusercontent.com/yyfxz/qqtv/main/qq.json"
+},
+{
+"sourceName": "业余分享日后多仓",
+"sourceUrl": "https://ghproxy.net/https://raw.githubusercontent.com/yyfxz/yyrh/main/fxz.json"
+},
+{
 "sourceName": "💚多多优选仓/jihulab",
 "sourceUrl": "https://jihulab.com/duomv/apps/-/raw/main/a.txt"
 },
