--- a/index.html
+++ b/index.html
@@ -1,46 +1,7 @@
 {
-"storeHouse": 
-[
-{
-"sourceName": "🏮星河贵宾①🏮",
-"sourceUrl": "https://agit.ai/hu/hcr/raw/branch/master/99668.txt"
-},
-{
-"sourceName": "🏮星河贵宾②🏮",
-"sourceUrl": "https://pan.css.lc/api/v3/file/get/90002/%E9%A3%9E%E6%9C%BA%E4%BB%9323.txt?sign=TGawyoffB7Ky5LLeND-J0-FiMqcsc1YD5n4QzyCdywY%3D%3A0"
-},
-{
-"sourceName": "🏮星河贵宾③🏮",
-"sourceUrl": "http://52bsj.vip:81/api/v3/file/get/67121/%E7%BB%BF%E8%8C%B61.txt?sign=P1Ko2EJyKAdWqcdNZhfmF0gsWTRvL971YmFYtzW25ek%3D%3A0"
-},
-{
-"sourceName": "🏮星河贵宾④🏮",
-"sourceUrl": "http://52bsj.vip:81/api/v3/file/get/67278/%E7%BB%BF%E8%8C%B64.txt?sign=MN_qRMG2fSRvQ38lIGw1alcZrrn07i27A1lVpsdyY7I%3D%3A0"
-},
-{
-		"sourceName": "🌹雨滴主仓库🌹",
-		"sourceUrl": "http://tv.nxog.top/nxog/ou.php?url=http://tv.nxog.top&b=雨滴"
-	}, {
-		"sourceName": "🌹雨滴主2仓库🌹",
-		"sourceUrl": "http://m.nxog.top/nxog/ou.php?url=http://m.nxog.top&b=雨滴"
-	}, {
-		"sourceName": "🌷雨滴1号备用仓库🌷",
-		"sourceUrl": "http://1.nxog.top/nxog/ou.php?url=http://1.nxog.top&b=雨滴"
-	}, {
-		"sourceName": "💐雨滴2号备用仓库💐",
-		"sourceUrl": "http://2.nxog.top/nxog/ou.php?url=http://2.nxog.top&b=雨滴"
-	}, {
-		"sourceName": "🌸雨滴3号备用仓库🌸",
-		"sourceUrl": "http://3.nxog.top/nxog/ou.php?url=http://3.nxog.top&b=雨滴"
-	}, {
-		"sourceName": "🌼雨滴4号备用仓库🌼",
-		"sourceUrl": "http://4.nxog.top/nxog/ou.php?url=http://4.nxog.top&b=雨滴"
-	}, {
-		"sourceName": "🌻雨滴5号备用仓库🌻",
-		"sourceUrl": "http://5.nxog.top/nxog/ou.php?url=http://5.nxog.top&b=雨滴"
-	}, {
-		"sourceName": "☘️本地仓库1☘️",
-		"sourceUrl": "http://tv.nxog.top/nxog/bd.php?b=雨滴"
-	}
-]
-}
+"storeHouse": [
+{"sourceName":"💚多多优选仓🍭软件接口🍭","sourceUrl":"https://www.gitlink.org.cn/api/leevi0321/apps/raw/ck/a.txt?ref=main"},
+{"sourceName":"💛多多公众仓🍭完全免费🍭","sourceUrl":"https://www.gitlink.org.cn/api/leevi0321/apps/raw/ck/b.txt?ref=main"},
+{"sourceName":"❤️多多聚合仓🍭严禁贩卖🍭","sourceUrl":"https://www.gitlink.org.cn/api/leevi0321/apps/raw/ck/c.txt?ref=main"},
+{"sourceName":"💜多多预备仓🍭不做韭菜🍭","sourceUrl":"https://www.gitlink.org.cn/api/leevi0321/apps/raw/ck/d.txt?ref=main"}
+]}
