--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 "storeHouse": 
 [
 {
-"sourceName": "业余分享奇奇多仓",
-"sourceUrl": "https://ghproxy.net/https://raw.githubusercontent.com/yyfxz/qqtv/main/qq.json"
+"sourceName": "分享快乐",
+"sourceUrl": "https://mirror.ghproxy.com/https://raw.githubusercontent.com/Rehe350/18/main/hlgg.json"
 }
 ]
 }
